# kitt

./: Jenkinsfile  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt
kitt/: config.py
kitt/data/: __init__.py  initialisation.py  kernels.py  kitt_kernels.py  multitrain.py  priors.py  tokeniser.py
kitt/data/sampler/: sample_generation.py  utils.py
kitt/data/uci/: __init__.py  dataset.py  utils.py
kitt/networks/: encoder_loading.py  rnn_decoder.py
kitt/networks/transformer/: classification_convolutional.py  classification_transformer.py  set_transformer_blocks.py  transformer_blocks.py  transformer_decoder.py
kitt/prototype/: evaluate.py  evaluate_captions.py  evaluate_classifier.py  get_models.py  kitt_end_to_end.py  objectives_and_metrics.py
kitt/prototype/attention/: bahdanau_attention.py  scaled_dot_product_attention.py
kitt/prototype/classifier/: callbacks.py  common.py  make_resnext.py  models.py  resnet.py  resnext.py
kitt/prototype/configs/: args.py  configs.py
kitt/prototype/scripts/: generate_all_datasets.py  generate_dataset.py  plot_prior_zoo.py  scaling_priors.py  train_classifier.py  train_kitt.py  view_vocabulary.py
kitt/prototype/scripts/experiments/: README.md  aggregate_ground_truth.py  aggregate_uci.py  all_in_one.py  benchmark_plot.py  evaluate_classifier_generated_models.py  evaluate_kitt.py  linear_kernel_comparison.py  (+7 more)
kitt/utils/: misc.py  save_load_models.py  timing.py  training.py
tests/unit/data/: test_datasets.py  test_kernels.py  test_kitt_kernels.py  test_tokeniser.py
tests/unit/prototype/: test_evaluate_captions.py
tests/unit/utils/: test_misc.py  test_save_load_models.py  test_training.py
(+8 files in other folders)
