[tool.poetry]
name = "kitt"
version = "0.0.1"
description = "Transformer Networks for GP Kernel Discovery"
authors = ["Fergus Simpson"]
packages = [{include = "kitt", from = "."}]

# Note: Poetry will exclude files declared in .gitignore when creating the python package file.

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = "^1.6"
matplotlib = "^3.3.3"
gpflow = "^2.1.3"
tqdm = "^4.52.0"
sacred = "^0.8.2"
streamlit = "^0.75.0"
joblib = "^1.0.0"
pandas = "1.1.*"
tensorflow = "2.3.*"
tensorflow-probability = "0.11.*"
tensorboard-plugin-profile = "^2.4.0"

[tool.poetry.dev-dependencies]
mypy = "0.711"
pylint = "2.3.1"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-mypy = "^0.6.1"
pytest-pylint = "^0.17.0"
taskipy = "^1.2.0"
pytest-black = "^0.3.8,!=0.3.10"
pytest-isort = "^1.0.0"

[tool.taskipy.tasks]
lint = "pytest --pylint --cache-clear -m pylint -v && pytest --pylint --cache-clear -m pylint --pylint-rcfile=extrapylint src"
mypy = "pytest --mypy --cache-clear -m mypy -v"
quicktest = "pytest -x --ff -rN -Wignore"
test = "pytest --cache-clear -ra -v --cov kitt --cov-report term --cov-report html:cover_html --junitxml=reports/junit.xml -o junit_family=xunit2"
black = "black ."
isort = "isort --atomic -y"
format = "task isort && task black"
check_format = "pytest -v --cache-clear --black --isort -m 'black or isort'"

[tool.black]
line-length = 95
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 95

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
